# DiffMaster

./: .diffmaster.yml  .env.example  .gitignore  Dockerfile  README.md  action.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: diffmaster.yml
alembic/: env.py
app/: __init__.py  config.py  main.py
app/api/: health.py  main.py  policies.py  repositories.py  reviews.py  router.py  webhooks.py
app/api/middleware/: auth.py
app/api/routes/: webhooks.py
app/core/: config.py
app/db/: session.py  vector.py
app/integrations/: base.py  github_integration.py  gitlab_integration.py  webhook_validator.py
app/models/: __init__.py  base.py  comment.py  policy.py  repository.py  review.py
app/parsing/: tree_sitter_parser.py
app/schemas/: comment.py  policy.py  repository.py  review.py  webhook.py
app/services/: agent_tools.py  audit.py  bitbucket_client.py  blast_radius.py  comment_generator.py  diff_parser.py  embeddings.py  feedback.py  feedback_tracker.py  github_client.py  gitlab_client.py  graph_builder.py  llm.py  orchestrator.py  parser.py  pgvector_db.py  policy.py  policy_engine.py  rag.py  retention.py  review_engine.py  vcs_client.py
app/services/rag/: embeddings.py  retriever.py
app/workers/: celery_app.py  review_tasks.py  tasks.py
tests/: conftest.py  test_api.py  test_blast_radius.py  test_comment_generator.py  test_diff_parser.py  test_policy_engine.py  test_review_engine.py  test_webhooks.py
